--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddSpoolActivity"></activity>
+        <activity android:name=".AddSpoolActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".PrintJobActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".WeightActivity"
+            android:parentActivityName=".MainActivity">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+
+        </activity>
     </application>
 
 </manifest>
